/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.loopring.lightcone.proto;

import "core_data.proto";
import "core_messages.proto";

message OrderState {
    bytes amount_s = 1;
    bytes amount_b = 2;
    bytes amount_fee = 3;
}

message Order {
    string id = 1;
    string token_s = 2;
    string token_b = 3;
    string token_fee = 4;
    bytes amount_s = 5;
    bytes amount_b = 6;
    bytes amount_fee = 7;
    int64 created_at = 8;
    int64 updated_at = 9;
    OrderStatus status = 10;
    double wallet_split_percentage = 11;
    OrderState outstanding = 12;
    OrderState reserved = 13;
    OrderState actual = 14;
    OrderState matchable = 15;
}

message ExpectedOrderFill {
    Order order = 1;
    OrderState pending = 2;
    bytes amount_margin = 3;
}

message OrderRing {
    ExpectedOrderFill maker = 1;
    ExpectedOrderFill taker = 2;
}


message BalanceAndAllowance {
    bytes balance = 1;
    bytes allowance = 2;
    bytes availableBalance = 3;
    bytes availableAllowance = 4;
}




// message OrderRecoverySettings {
//     bool skip_recovery = 1;
//     int32 batch_size = 2;
//     string order_owner = 3;
//     MarketId market_id = 4;
// }








enum ExecutionStatus {
    EXECUTED_STATUS_UNKNOW = 0;
    EXECUTED_STATUS_FAILED = 1;
    EXECUTED_STATUS_SUCCESS = 2;
}




message UpdatedTokenBurnRate {
    string token = 1;
    double burnRate = 2;
}


